# ai_deep

./: .env.example  .env.gpg  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
PRDs/: 20260524_1639_prd_estrutura_diretorios_revisado.md  20260524_1650_prd_modulo_logging_robusto.md  20260524_1710_prd_listagem_arquivos_diretorio_hrns.md  20260524_1826_prd_textual_hrns.md  20260524_1911_prd_chatStatusPanel.md  20260524_1919_prd_persistencia_historico_chat_hrns.md  20260524_2025_prd_bordas_abas_hrns.md  20260524_2041_prd_atalhos_abas_hrns.md  20260524_2102_prd_frontmatter_skills_hrns.md  CHANGELOG.md
action/: implement-prd.md
execution_state/: main.py
poc/control_flow/: README.md  main.py  pyproject.toml
poc/db/: test.py
poc/db/core/: agent.py
poc/db/server/: database.py  main.py
poc/execution_state/: main.py  pyproject.toml
poc/execution_state/core/: agent.py
poc/execution_state/core/models/: state.py
poc/execution_state/core/prompts/: base_system.md  context_format.md
poc/func_call/: .env.example  README.md  main.py  pyproject.toml
poc/pause_resume/: main.py  pyproject.toml
poc/prompt_ownership/: main.py  pyproject.toml
poc/prompt_ownership/core/: agent.py
poc/server/: test.py
poc/server/core/models/: state.py
poc/server/server/: main.py
poc/stateless_reducer/: main.py  pyproject.toml
poc/stateless_reducer/core/: agent.py
src/hrns/: __init__.py  chat.py  chat_history.py  discovery.py  structure.py
src/hrns/logging/: __init__.py  config.py  formatter.py  logger.py
src/hrns/tui/: __init__.py  app.py  validate.py
tests/: test_chat_history.py  test_discovery.py  test_frontmatter.py  test_logging.py  test_structure.py  test_tui.py
(+17 files in other folders)
