[project]
name = "hrns"
version = "0.1.0"
description = "HARNESS para API do DeepSeek"
requires-python = ">=3.12"
dependencies = [
    "openai>=2.38.0",
    "python-dotenv>=1.2.2",
    "taskipy>=1.14.0",
]

[project.scripts]
hrns = "main:main"

[tool.taskipy.tasks]
encrypt = "gpg --symmetric --cipher-algo AES256 -o .env.gpg .env"
decrypt = "gpg --decrypt -o .env .env.gpg"
