[project]
name = "hrns"
version = "0.1.0"
description = "HARNESS para API do DeepSeek"
requires-python = ">=3.12"
dependencies = [
    "openai>=2.38.0",
    "python-dotenv>=1.2.2",
    "python-frontmatter>=1.0",
    "taskipy>=1.14.0",
    "textual>=2.0.0",
]

[project.scripts]
hrns = "main:main"
hrns-tui = "hrns.tui.validate:run_tui"

[tool.taskipy.tasks]
encrypt = "gpg --symmetric --cipher-algo AES256 -o .env.gpg .env"
decrypt = "gpg --decrypt -o .env .env.gpg"

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.uv]
package = true

[tool.uv.workspace]
members = [
    "poc/func_call",
    "poc/control_flow",
    "poc/stateless_reducer",
    "poc/prompt_ownership",
    "execution_state",
    "poc/execution_state",
]
